--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>		
 		<!-- tag::springSecurity[] -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
